[package]
name = "solana-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.17.10"
solana-client = "1.17.10"
spl-token-client = "0.8.0"
spl-token-2022 = "1.0.0"
spl-token = "4.0.0"

dotenv = "0.15.0" 
serde_json = "1.0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"